--- a/Lições.html
+++ b/Lições.html
@@ -18,7 +18,8 @@
        <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #1a1a1a; /* Fundo escuro */
+             color: #f4f4f4; /* Texto claro para contraste */
             margin: 0;
             padding: 0;
         }
