--- a/quizz2.html
+++ b/quizz2.html
@@ -14,18 +14,10 @@
         }
 
         header {
-            background-color: #4A90E2;
-            color: #ffffff;
-            padding: 20px 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        header .container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
         }
 
         header h1 {
@@ -35,11 +27,13 @@
         nav ul {
             list-style: none;
             padding: 0;
+            margin: 0;
             display: flex;
+            justify-content: center;
         }
 
         nav ul li {
-            margin-left: 20px;
+            margin: 0 15px;
         }
 
         nav ul li a {
